# lin_ald

./: Cargo.toml
src/: lin_ops.rs  main.rs  matrix.rs  metd.rs  vec.rs
