[package]
name = "lin_aldg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
# https://github.com/rust-ndarray/ndarray-linalg
ndarray-linalg = { version = "0.14.1", features = ["netlib-system"] }
# m1 backend
# ndarray-linalg = { version = "0.14.1", features = ["openblas-static"] }
num-traits = "0.2.15"
rand = "0.8.5"
num = "0.4.0"
